--- a/src/app.css
+++ b/src/app.css
@@ -1,13 +1,33 @@
-@import url("https://fonts.googleapis.com/css2?family=Mozilla+Text:wght@200..700&family=Vast+Shadow&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Doto:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Slabo+13px&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Forum&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jersey+15&display=swap");
 @import "tailwindcss";
 @plugin '@tailwindcss/typography';
 
 @theme {
-  --font-fancy-serif: "Vast Shadow", serif;
-  --font-serif: "Libre Caslon Text", serif;
-  --font-sans: "Public Sans", sans-serif;
-  --font-fancy-sans: "Zalando Sans SemiExpanded", sans-serif;
+  --font-huge: "Doto", sans-serif;
+  --font-title: "Jersey 15", sans-serif;
+  --font-sans: "Lekton", monospace;
+  --font-readable-sans: "Slabo", serif;
+  /* --color-polar-night-darker: #2e3440;
+  --color-polar-night-dark: #434c5e;
+  --color-polar-night-light: #4c566a;
+  --color-snow-storm-dark: #d8dee9;
+  --color-snow-storm-light: #eceff4;
+  --color-frost-turquoise: #8fbcbb;
+  --color-frost-light-blue: #88c0d0;
+  --color-frost-dark-blue: #5e81ac;
+  --color-aurora-red: #bf616a;
+  --color-aurora-green: #a3be8c; */
+  --color-gvb-bg: #282828;
+  --color-gvb-red: #cc241d;
+  --color-gvb-green: #98971a;
+  --color-gvb-yellow: #d79921;
+  --color-gvb-blue: #458588;
+  --color-gvb-purple: #b16286;
+  --color-gvb-aqua: #689d6a;
+  --color-gvb-gray: #a89984;
+  --color-gvb-white: #f9f5d7;
 }
