--- a/src/app.css
+++ b/src/app.css
@@ -1,14 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Doto:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Slabo+13px&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Forum&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Jersey+15&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Libertinus+Mono&display=swap");
 @import "tailwindcss";
 @plugin '@tailwindcss/typography';
 
 @theme {
   --font-huge: "Doto", sans-serif;
-  --font-title: "Jersey 15", sans-serif;
+  --font-title: "Libertinus Mono", monospace;
   --font-sans: "Lekton", monospace;
   --font-readable-sans: "Slabo", serif;
   /* --color-polar-night-darker: #2e3440;
