--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Doto:wght@100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Slabo+13px&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Libertinus+Mono&display=swap");
 @import "tailwindcss";
 
 @theme {
@@ -28,4 +24,8 @@
   --color-gvb-aqua: #689d6a;
   --color-gvb-gray: #a89984;
   --color-gvb-white: #f9f5d7;
+}
+
+body {
+  background-color: var(--color-gvb-bg);
 }
